fix EZ-329, adding back button in dashboard add marketplaces page, moving css for add marketplace page from wizard.css to app.css, fixing pacnetstatus wrapping div class, fixing payearly select height

--- a/App/PluginWeb/EzBob.Web/Content/css/app.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/app.css
@@ -936,3 +936,13 @@ input[type="color"],
     width: 759px;
     height: 77px;
 }
+
+.accounts-list > div {
+    margin-left: 0!important;
+	margin-top: 20px;
+}
+
+.eBayPaypalRule { font-weight: bold; color: red; margin-top: 0.6em; }
+
+.cont-button .eBayPaypalRule { float: left; }
+
